# II4012-TB-K02-G17

./: .gitignore  Makefile  docker-compose.yml  lefthook.yml  package.json  turbo.json
.github/workflows/: ci.yml
apps/admin/: package.json  tsconfig.tsbuildinfo
apps/admin-service/: go.mod  go.sum  main.go
apps/admin-service/internal/config/: config.go
apps/admin-service/internal/handler/: dashboard.go  dashboard_test.go  disputes.go  disputes_test.go  dlq.go  dlq_test.go  finance.go  finance_test.go  projects.go  projects_test.go  users.go  users_test.go
apps/admin-service/internal/middleware/: admin_auth.go
apps/admin-service/internal/observability/: nats.go
apps/admin-service/internal/publisher/: mock.go  nats.go
apps/admin-service/internal/store/: dashboard.go  disputes.go  dlq.go  finance.go  interfaces.go  mocks.go  projects.go  users.go
apps/admin/src/: routeTree.gen.ts
apps/admin/src/routes/: _authenticated.tsx
apps/ai-service/: .gitignore  main.py  pyproject.toml
apps/ai-service/app/middleware/: __init__.py  auth.py
apps/ai-service/app/models/: schemas.py
apps/ai-service/app/observability/: __init__.py  otel.py
apps/ai-service/app/routes/: ai.py  health.py
apps/ai-service/app/services/: cv_parser.py  embedding.py  nats_client.py  nats_consumer.py  rag.py
apps/ai-service/tests/: conftest.py  test_ai_routes.py  test_atdd_acceptance.py  test_atdd_schema.py  test_health.py  test_nats_wiring.py  test_service_auth.py
apps/auth-service/: package.json
apps/auth-service/coverage/: coverage-summary.json  lcov.info
apps/auth-service/coverage/lcov-report/: index.html
apps/auth-service/src/: index.ts  otel.ts
apps/auth-service/src/lib/: auth.ts  email.ts  sms.test.ts
apps/auth-service/src/routes/: auth.test.ts  health.test.ts
apps/gateway/: Dockerfile.api-gateway  Dockerfile.centrifugo  centrifugo-prod.json  centrifugo.json  dynamic.yml  nats-init-streams.sh  nginx-api-gateway.conf  tensorzero.toml
apps/notification-service/: go.mod  go.sum  main.go
apps/notification-service/features/: notification_test.go
apps/notification-service/internal/config/: config.go  config_test.go
apps/notification-service/internal/consumer/: nats.go
apps/notification-service/internal/handler/: routes.go  routes_test.go
apps/notification-service/internal/idempotency/: idempotency.go  idempotency_test.go
apps/payment-service/: go.mod  go.sum  main.go
apps/payment-service/features/: escrow_test.go
apps/project-service/: package.json  vitest.setup.ts
apps/project-service/coverage/: coverage-summary.json  lcov.info
apps/project-service/src/: index.ts  otel.ts
apps/web/: Dockerfile  package.json
(+160 files in other folders)
