[project]
name = "kerjacus-ai-service"
version = "0.1.0"
description = "KerjaCUS! AI Service - LLM gateway, CV parsing, talent matching"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.42.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.0.0",
    "instructor>=1.14.0",
    "openai>=2.29.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "psycopg[binary]>=3.3.0",
    "psycopg-pool>=3.2.0",
    "pypdfium2>=5.6.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "nats-py>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest-bdd>=8.1.0",
    "schemathesis>=4.13.0",
    "starlette-testclient>=0.4.0",
    "ruff>=0.15.14",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
